--- a/src/main/webapp/login.css
+++ b/src/main/webapp/login.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+/* CSS Document */
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
 @font-face{
 	src:url("http://dl.dropbox.com/u/94346812/cssdeck/fonts/pictos-regular-webfont.ttf") format("truetype"),
@@ -7,20 +9,18 @@
 }
 
 body{
-
+	margin:0;
+	background:#292931;
 	font-family:'Open Sans';
-}
-#frame{
-    background-image:url('Talking_animals_banner.png');
 }
 label{
 	font-family:icon;
 	text-shadow:0 -1px 0 #666;
-	-webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased; 
 }
 #block,#option{
 	width:230px;
-	height:113px;
+	height:115px;
 	margin:auto;
 }
 #block{
@@ -32,9 +32,7 @@ label{
 	display:block;
 	width:230px;
 	height:3px;
-		/* The rainbow*/
-	background:linear-gradient(left, rgba(173,107,173,1) 0%, rgba(173,107,173,1) 1%, rgba(181,121,168,1) 1%, rgba(181,126,181,1) 2%, rgba(181,126,181,1) 2%, rgba(189,136,187,1) 3%, rgba(189,136,187,1) 3%, rgba(197,151,181,1) 4%, rgba(197,151,181,1) 5%, rgba(206,165,194,1) 5%, rgba(206,165,194,1) 6%, rgba(214,178,194,1) 6%, rgba(214,178,194,1) 7%, rgba(222,189,189,1) 7%, rgba(222,189,189,1) 8%, rgba(222,197,197,1) 8%, rgba(222,197,197,1) 9%, rgba(229,210,200,1) 9%, rgba(229,210,200,1) 10%, rgba(241,230,197,1) 11%, rgba(241,230,197,1) 12%, rgba(247,247,197,1) 12%, rgba(247,247,197,1) 15%, rgba(236,247,194,1) 15%, rgba(236,247,194,1) 16%, rgba(230,239,189,1) 17%, rgba(230,239,189,1) 18%, rgba(222,239,183,1) 19%, rgba(222,239,183,1) 20%, rgba(212,239,176,1) 20%, rgba(212,239,176,1) 22%, rgba(201,230,165,1) 22%, rgba(201,230,165,1) 25%, rgba(186,230,158,1) 26%, rgba(186,230,158,1) 27%, rgba(182,225,147,1) 27%, rgba(182,225,147,1) 30%, rgba(169,222,140,1) 30%, rgba(169,222,140,1) 32%, rgba(160,222,132,1) 32%, rgba(160,222,132,1) 36%, rgba(156,214,147,1) 36%, rgba(156,214,147,1) 39%, rgba(148,214,161,1) 40%, rgba(148,214,161,1) 43%, rgba(148,214,174,1) 43%, rgba(148,214,174,1) 45%, rgba(148,206,186,1) 46%, rgba(148,206,186,1) 48%, rgba(140,206,197,1) 49%, rgba(140,206,197,1) 52%, rgba(140,206,212,1) 52%, rgba(140,206,212,1) 55%, rgba(140,195,221,1) 55%, rgba(140,195,221,1) 58%, rgba(148,179,210,1) 59%, rgba(148,179,210,1) 60%, rgba(156,173,206,1) 61%, rgba(156,167,197,1) 61%, rgba(156,167,197,1) 63%, rgba(165,154,189,1) 63%, rgba(165,154,189,1) 64%, rgba(169,148,181,1) 65%, rgba(169,148,181,1) 66%, rgba(173,134,175,1) 66%, rgba(173,134,175,1) 67%, rgba(181,121,168,1) 67%, rgba(181,121,168,1) 69%, rgba(189,115,156,1) 69%, rgba(189,115,156,1) 70%, rgba(196,102,146,1) 71%, rgba(196,102,146,1) 72%, rgba(200,88,143,1) 73%, rgba(200,88,143,1) 74%, rgba(206,80,132,1) 74%, rgba(206,80,132,1) 76%, rgba(214,64,123,1) 76%, rgba(214,64,123,1) 78%, rgba(220,59,114,1) 78%, rgba(220,59,114,1) 79%, rgba(222,48,110,1) 79%, rgba(222,48,110,1) 80%, rgba(232,42,107,1) 80%, rgba(232,42,107,1) 81%, rgba(230,33,99,1) 81%, rgba(230,33,99,1) 83%, rgba(232,42,107,1) 83%, rgba(232,42,107,1) 84%, rgba(222,48,110,1) 85%, rgba(222,48,110,1) 86%, rgba(220,59,114,1) 87%, rgba(220,59,114,1) 88%, rgba(214,64,123,1) 88%, rgba(214,64,123,1) 89%, rgba(206,66,130,1) 90%, rgba(206,66,130,1) 92%, rgba(199,74,141,1) 92%, rgba(199,74,141,1) 94%, rgba(189,82,148,1) 95%, rgba(189,82,148,1) 96%, rgba(184,90,158,1) 97%, rgba(184,90,158,1) 99%, rgba(181,99,165,1) 99%, rgba(181,99,165,1) 100%);
-
+	
 }
 #block:after{
 	content:'';
@@ -43,8 +41,8 @@ label{
 	height:15px;
 	background:#423143;
 	transform:rotate(-45deg);
-	-ms-transform:rotate(-45deg);
-    -webkit-transform:rotate(-45deg);
+	-ms-transform:rotate(-45deg); 
+	-webkit-transform:rotate(-45deg); 
 	margin:10px 18px;
 	position:absolute;
 }
@@ -112,8 +110,8 @@ label{
 	color:#fff;font-size:8px;font-weight:bold;
 }
 #option{
-	width:230px;
-	height:80px;
+	width:400px;
+	height:115px;
 	overflow:hidden;
 	margin:auto;
 }
@@ -126,7 +124,7 @@ label{
 	display:block;
 	float:left;
 	-webkit-font-smoothing: antialiased;
-/*text-shadow:0 -1px 0 #000;*/
+/*text-shadow:0 -1px 0 #000;*/	
 }
 #option a{
 	-webkit-font-smoothing: antialiased;
@@ -149,21 +147,14 @@ input{padding-left:40px;}
 	color:#999;
 	font-size:16px;
 }
-:-moz-input-placeholder {
+:-moz-input-placeholder {  
 	color:#999;
 	font-size:16px;
 }
 
-/* Want to see the magic ? So open a webkit browser then remove the comments below !
-
-/!\ YOU NEED TO PLACE THIS IN INPUTS /!\
-
-oninvalid="setCustomValidity('Custom Message')"
-*/
-
 input::-webkit-validation-bubble-message {
 	color:white;
-	background: #e62163;
+	background-color:: #e62163;
   border:0;
 	border-radius:0;
 	padding:0;
@@ -182,7 +173,7 @@ input::-webkit-validation-bubble-message:before {
 	font-family:icon;
 	color:white;
 	background: #e62163;
-  border:0;
+    border:0;
 	border-radius:0;
 	padding:0;
 	width:34px;
@@ -208,4 +199,8 @@ input::-webkit-validation-bubble-arrow {
 	height:10px;
 	position:absolute;
 	margin:-23px 178px;
+}
+
+footer {
+    margin-bottom:0;
 }
