--- a/src/main/webapp/login.css
+++ b/src/main/webapp/login.css
@@ -19,7 +19,7 @@ label{
 	-webkit-font-smoothing: antialiased; 
 }
 #block,#option{
-	width:230px;
+	width:330px;
 	height:115px;
 	margin:auto;
 }
@@ -67,7 +67,7 @@ label{
 }
 #submit{
 	border:0;
-	margin:-29px 180px;
+	margin:-29px 280px;
 	border-top-left-radius:0px;
 	border-bottom-left-radius:0px;
 	border-top-right-radius:2px;
@@ -75,7 +75,7 @@ label{
 	font-family:icon;
 	background:#ae6cac;
 	text-shadow:0 -1px 0 #333;
-		box-shadow:-1px 0 1px 0px #6c5b6d;
+	box-shadow:-1px 0 1px 0px #6c5b6d;
 	font-size:12px;
 	line-height:2.8;
 	padding:0;
@@ -92,7 +92,7 @@ label{
 	-webkit-font-smoothing: antialiased;
 }
 #block input[type=text],#block  input[type=password]{
-	width:156px;
+	width:256px;
 	height:32px;
 	margin:15px 15px;
 	border:0;
@@ -102,7 +102,7 @@ label{
 	font-size:18px;
 }
 #block input[type=password]{
-	width:156px;
+	width:256px;
 	height:32px;
 	margin:-5px 15px;
 }
@@ -202,9 +202,12 @@ input::-webkit-validation-bubble-arrow {
 }
 
 footer {
-    -moz-box-shadow: 10px 10px 5px #fff;
-    -webkit-box-shadow: 10px 10px 5px #fff;
-    box-shadow: 10px 10px 5px #fff;
+
     margin-top: 220px;
     margin-bottom:0;
+}
+img {
+     -moz-box-shadow: -8px -10px 10px #fff;
+     -webkit-box-shadow: -8px -10px 10px #fff;
+     box-shadow: -8px -10px 10px #fff;
 }
